apps/base/alfio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alfio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alfio
  template:
    metadata:
      labels:
        app: alfio
    spec:
      containers:
        - env:
            - name: POSTGRES_ENV_POSTGRES_DB
              value: alfio
            - name: POSTGRES_ENV_POSTGRES_PASSWORD
              value: 237vnaw8zevbaacwzebt
            - name: POSTGRES_ENV_POSTGRES_USERNAME
              value: alfy
            - name: POSTGRES_PORT_5432_TCP_ADDR
              value: postgresql-95-centos7
            - name: POSTGRES_PORT_5432_TCP_PORT
              value: "5432"
          image: "alfio/alf.io:2.0-M4-2204-1"
          imagePullPolicy: IfNotPresent
          name: alfio
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 9779
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              memory: 1Gi
