apps/base/alfio/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: alfio
  name: alfio
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
    - name: 9779-tcp
      port: 9779
      protocol: TCP
      targetPort: 9779
  selector:
    app: alfio
    deploymentconfig: alfio
  sessionAffinity: None
  type: ClusterIP
